--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
     <p> sdds <p>
  <a>sderdfd<a>
 new add 
+
+
+<style> 
+    p{
+        background-color: aqua;
+        margin-left: auto;
+    }
+</style>
 </body>
 </html>
